--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,23 @@
-pandas==2.2.3
+certifi==2022.12.7
+charset-normalizer==2.1.1
+filelock==3.13.1
+idna==3.4
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.0
+numpy==1.24.1
+pandas==2.0.3
+pillow==10.2.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+requests==2.28.1
+six==1.17.0
+sympy==1.13.1
+torch==2.0.0+cpu
+torchaudio==2.0.1+cpu
+torchvision==0.15.1+cpu
 tqdm==4.67.1
+typing_extensions==4.9.0
+tzdata==2024.2
+urllib3==1.26.13
